refact(auth): refactoring domains (#120)
* fix: update links

* refact: removing error in i18n

* feat: update documentation

* refact: update create table of user

* fix: link

* refact: refactoring domains

* fix: create account and active account

* fix: activation

* fix: login

* feat: moving folders to project root

* fix: testing

* refact: removing frontend

* refact: add pkg in utils

* feat: update readme
